@@ -1,6 +1,7 @@
 This file documents the revision history for Perl extension Mojolicious.
 
 2.81  2012-04-14
+  - Improved error handling in Mojolicious::Plugin::JSONConfig.
   - Improved router log messages.
   - Improved all debug messages.
   - Improved documentation.
